# GPMD85emu automake
# mborik, 10/2011

AUTOMAKE_OPTIONS = foreign
ROM = \
	3kzd1p32.rmm \
	bas20-fd.rmm \
	bas20-gz.rmm \
	bas20.rmm \
	basic1.rmm \
	basic1tx.rmm \
	basic2A.rmm \
	basic2.rmm \
	basic3.rmm \
	basnet3.rmm \
	bm3.rmm \
	booter2-pmd85-pmd32.rmm \
	bt100.rmm \
	c2717-2.rom \
	c2717.rom \
	copy.rmm \
	demo0-c.rmm \
	demo0.rmm \
	didalfa2.rom \
	didalfa.rom \
	erb1.rmm \
	kli2.rmm \
	kzd-1-m2-k3.rmm \
	kzd-1-m2-k4.rmm \
	kzd-1-m3-k4.rmm \
	mato-gm2-en.rom \
	mato-gm2-sk.rom \
	mato-gm3.rom \
	mato-gm.rom \
	mato-lan.rom \
	mato-mb.rom \
	mato-mb-ru.rom \
	mon19-15k-2A.rom \
	mon19-16k.rom \
	mon19-4k.rom \
	mon20-4k.rom \
	mon20-fd.rom \
	mon20-gz.rom \
	monit1cs.rom \
	monit1.rom \
	monit1u.rom \
	monit2A.rom \
	monit2E.rom \
	monit2.rom \
	monit3.rom \
	mrs2.rmm \
	pascal22.rmm \
	pascal2.rmm \
	pmd30.rom \
	pmd32.rom \
	pmd40.rmm \
	pmd85-pmd32.rmm \
	sach1.rmm \
	term3.rmm \
	wurmi.rmm \
	xy41xx-m1.rmm \
	xy41xx-m2.rmm

pkgdata_DATA = $(ROM)

EXTRA_DIST = $(ROM) rom-list.txt

