# GPMD85emu automake
# mborik, 10/2011

AUTOMAKE_OPTIONS = foreign
ROM = \
	bas20.rmm \
	bas20-fd.rmm \
	bas20-gz.rmm \
	basic1.rmm \
	basic1tx.rmm \
	basic2.rmm \
	basic2A.rmm \
	basic3.rmm \
	booter2-pmd85-pmd32.rmm \
	c2717.rom \
	c2717-2.rom \
	demo0.rmm \
	demo0-c.rmm \
	didalfa.rom \
	didalfa2.rom \
	kli2.rmm \
	mato-gm.rom \
	mato-gm2-en.rom \
	mato-gm2-sk.rom \
	mato-gm3.rom \
	mato-mb.rom \
	mato-mb-ru.rom \
	mon19-15k-2A.rom \
	mon19-16k.rom \
	mon19-4k.rom \
	mon20-4k.rom \
	mon20-fd.rom \
	mon20-gz.rom \
	monit1.rom \
	monit1cs.rom \
	monit1u.rom \
	monit2.rom \
	monit2A.rom \
	monit2E.rom \
	monit3.rom \
	mrs2.rmm \
	pascal1.rmm \
	pascal22.rmm \
	pmd85-pmd32.rmm \
	sach1.rmm \
	wurmi.rmm

pkgdata_DATA = $(ROM)

EXTRA_DIST = $(ROM) rom-list.txt

